@@ -2823,6 +2823,15 @@ block|}
 name|setupPipelineForAppendOrRecovery
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+literal|true
+operator|==
+name|streamerClosed
+condition|)
+block|{
+continue|continue;
+block|}
 name|initDataStreaming
 argument_list|()
 expr_stmt|;
@@ -3279,6 +3288,14 @@ argument_list|(
 name|e
 argument_list|)
 expr_stmt|;
+assert|assert
+operator|!
+operator|(
+name|e
+operator|instanceof
+name|NullPointerException
+operator|)
+assert|;
 name|hasError
 operator|=
 literal|true
