@@ -3466,6 +3466,183 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|10000
+argument_list|)
+DECL|method|testAppendCorruptedBlock ()
+specifier|public
+name|void
+name|testAppendCorruptedBlock
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_BLOCK_SIZE_KEY
+argument_list|,
+literal|1024
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_REPLICATION_KEY
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+literal|"dfs.min.replication"
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|DistributedFileSystem
+name|fs
+init|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+decl_stmt|;
+name|Path
+name|fileName
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/appendCorruptBlock"
+argument_list|)
+decl_stmt|;
+name|DFSTestUtil
+operator|.
+name|createFile
+argument_list|(
+name|fs
+argument_list|,
+name|fileName
+argument_list|,
+literal|512
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|waitReplication
+argument_list|(
+name|fs
+argument_list|,
+name|fileName
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"File not created"
+argument_list|,
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|fileName
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ExtendedBlock
+name|block
+init|=
+name|DFSTestUtil
+operator|.
+name|getFirstBlock
+argument_list|(
+name|fs
+argument_list|,
+name|fileName
+argument_list|)
+decl_stmt|;
+name|cluster
+operator|.
+name|corruptBlockOnDataNodes
+argument_list|(
+name|block
+argument_list|)
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|appendFile
+argument_list|(
+name|fs
+argument_list|,
+name|fileName
+argument_list|,
+literal|"appendCorruptBlock"
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
